--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.0",
     "ngx-toastr": "^15.0.0",
+    "node": "^16.17.0",
     "rxjs": "~7.5.0",
     "s": "^1.0.0",
     "save": "^2.5.0",
